[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.41.0", features = ["full"] }
axum = { version = "0.7.7", features = ["default", "form", "macros"] }
axum-macros = "0.4.2"
axum-extra = { version = "0.9.4", features = ["typed-header"] }

aws-config = "1.5.9"
aws-sdk-dynamodb = "1.52.0"
aws-sdk-secretsmanager = "1.53.0"

serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"

strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
itertools = "0.13.0"
#modyne = "0.3.0"

anyhow = "*"
thiserror = "*"

jsonwebtoken = { version = "9", default-features = false }
tracing = "0.1.40"
reqwest = { version = "0.12.9", features = ["json"] }
dotenv = "0.15.0"